# lucapasquarelli

./: .fastapicloudignore  .gitignore  dashboard.html  index.html  main.py  podcast.html  pyproject.toml  query.sql
apis/: main.py
cooking_recipes/: commands.txt  ideas.txt  learning_path.txt
css/: dashboard.css  podcast.css  style.css
js/: dashboard.js
pages/: dashboard.html  podcast.html
